--- a/jboard1/src/main/webapp/css/style.css
+++ b/jboard1/src/main/webapp/css/style.css
@@ -343,13 +343,13 @@ main {
 .view > section > h3 {
     font-weight: bold;
 }
-.view > .commentList > article {
+.view > .commentList article {
     border-top: 1px dotted #999;
     margin-top: 10px;
     padding-top: 10px;
 }
 
-.view > .commentList > article > textarea {
+.view > .commentList article > textarea {
     width: 100%;
     height: 60px;
     padding: 6px;
@@ -358,11 +358,11 @@ main {
     border: 0;
     background: transparent;
 }
-.view > .commentList > article > div {
+.view > .commentList article > div {
     text-align: right;
 }
 
-.view > .commentList > .empty {
+.view > .commentList .empty {
     padding: 20px 0;
     text-align: center;
 }
